// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CrtScreen > (Snapshot) default rendering 1`] = `
<div
  class="crt-scanlines crt-flicker crt-vignette bg-crt-surface text-crt-text relative overflow-hidden rounded-lg"
>
  <div
    class="crt-glow relative z-1 p-4 blur-[0.3px]"
  >
    Phosphor content
  </div>
</div>
`;

exports[`CrtScreen > (Snapshot) green theme rendering 1`] = `
<div
  data-theme="green"
>
  <div
    class="crt-scanlines crt-flicker crt-vignette bg-crt-surface text-crt-text relative overflow-hidden rounded-lg"
  >
    <div
      class="crt-glow relative z-1 p-4 blur-[0.3px]"
    >
      Green phosphor content
    </div>
  </div>
</div>
`;
